- Scrolling performance has been improved for the card list.
- Extended the supported image types for the local art import for movies and music files. 

[Fixed]
- Right-click menu on attachment: icon size too large.
- Icons in main window were blurry.
- View never updated the status bar when only 1 item has been selected.
- Attachments menu was missing icons.


--------------------------------------------------------------------
Data Crow version 4.11                        Released on 2023-12-04
--------------------------------------------------------------------

[Fixed]
- Sometimes items could not be saved due to an error in calculating the file hash.
- Sometimes an attachment could not be opened.
- Added better management of number of requests for the Google Book Search. In case of a "too many request" error, Data Crow will retry after 1.5 seconds and will do so for a maximum of 4 retries. 
- MobyGames.com did not show & and other characters correctly in the title.
- Create tab window size was not stored.
- Icon cannot be selected when creating a new tab for the item form.
- When a data folder / user folder was newly set up, Data Crow would (try to) create nulldc.script and nulldc.properties in the installation folder.
- Removed synchronizer for persons (should not have been there)
- Removed calendar export for loans for modules not supporting loan management

[Changed]
- Added cancel option when the item form is closed and unsaved changes are detected. This keeps the dialog open without making any changes.
- Added a create button to the references selection dialog.
- New icons; existing system icons have been replaced with new ones with a bigger size (32x32 instead of 16x16)
- Changed icons for most menu items.
- Existing item form tabs can now be edited.