@@ -1,3 +1,6 @@
+lblIncludeImage = Include Pictures
+lblIncludeAttachments = Include Attachments
+lblCopyAttachments = Copy Attachments
 lblEditTab = Edit Tab
 lblEBookFiles = EBook file types
 lblMovieFiles = Movies file types
