@@ -20,6 +20,12 @@ Data Crow version 5.0                         Released on 2024-xx-xx
 - View never updated the status bar when only 1 item has been selected.
 - Attachments menu was missing icons.
 
+translations TODO:
+
+lblIncludeImage = Include Pictures
+lblIncludeAttachments = Include Attachments
+lblCopyAttachments = Copy Attachments
+
 
 --------------------------------------------------------------------
 Data Crow version 4.11                        Released on 2023-12-04
